[gd_scene load_steps=8 format=3 uid="uid://c6kwt11ox07s1"]

[ext_resource type="Script" path="res://src/herd/menus/NextLevelMenu.gd" id="1_xnq8o"]
[ext_resource type="PackedScene" uid="uid://cny4ykpodxqv6" path="res://addons/core/navi/ui/HeroLabel.tscn" id="2_veluj"]
[ext_resource type="RichTextEffect" path="res://addons/teeb.text_effects/resources/Jump.tres" id="3_om0ln"]
[ext_resource type="Script" path="res://src/herd/menus/LevelButtonList.gd" id="4_rbhdf"]
[ext_resource type="FontFile" uid="uid://d06oxhmw5eq58" path="res://addons/core/assets/fonts/vexed/Arcade_Cabinet.ttf" id="4_rckor"]
[ext_resource type="RichTextEffect" uid="uid://cxd4xajdoafoh" path="res://addons/teeb.text_effects/resources/ColorMod.tres" id="5_sx7g6"]
[ext_resource type="RichTextEffect" path="res://addons/teeb.text_effects/resources/Sparkle.tres" id="6_s7e2t"]

[node name="NextLevelMenu" type="CanvasLayer"]
layer = 2
script = ExtResource("1_xnq8o")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HeroLabel" parent="PanelContainer/VBoxContainer" instance=ExtResource("2_veluj")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/normal_font_size = 128
text = "[center][jump]Level Complete[/jump][/center]"
custom_effects = [ExtResource("3_om0ln")]

[node name="SheepSaved" type="RichTextLabel" parent="PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("4_rckor")
bbcode_enabled = true
text = "[center]Sheep saved: [/center]"
fit_content = true
scroll_active = false
custom_effects = [ExtResource("5_sx7g6"), ExtResource("3_om0ln"), ExtResource("6_s7e2t")]

[node name="CenterContainer" type="CenterContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LevelButtonList" type="VBoxContainer" parent="PanelContainer/VBoxContainer/CenterContainer"]
unique_name_in_owner = true
layout_mode = 2
script = ExtResource("4_rbhdf")

[node name="MarginContainer2" type="MarginContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
